Fixes by comments review

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1409,13 +1409,13 @@ angal.therapy.addtherapy.btn.key                                                
 angal.therapy.addvisit.btn                                                                             = Add Visit
 angal.therapy.addvisit.btn.key                                                                         = D
 angal.therapy.availablem                                                                               = AVAILABLE
-angal.therapy.changenotifysettingsfor                                                                  = Change notify settings
+angal.therapy.changenotifysettingsfor.fmt                                                              = Change notify settings {0}
 angal.therapy.checkavailability.btn                                                                    = Check Availability
 angal.therapy.checkavailability.btn.key                                                                = H
 angal.therapy.daydays                                                                                  = day/s
-angal.therapy.deletealltherapiesfor                                                                    = Delete all therapies for
-angal.therapy.deleteallvisitsfor                                                                       = Delete all visits for
-angal.therapy.doyouwanttosetanumernowfor                                                               = Do you want to set a telephone number for
+angal.therapy.deletealltherapiesfor.fmt                                                                = Delete all therapies for {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Delete all visits for {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Do you want to set a telephone number for {0}
 angal.therapy.edittherapy.btn                                                                          = Edit Therapy
 angal.therapy.edittherapy.btn.key                                                                      = E
 angal.therapy.edittherapyentryform.title                                                               = Edit Therapy Entry Form
@@ -1441,8 +1441,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Patient visits saved.
 angal.therapy.period                                                                                   = Period
 angal.therapy.pharmaceutical                                                                           = Pharmaceutical
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Please insert a quantity greater than 0
-angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Please save the visits plan first
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Please insert a quantity greater than 0.
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Please save the visits plan first.
 angal.therapy.removetherapy.btn                                                                        = Remove Therapy
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remove Visit
@@ -1452,12 +1452,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Start
 angal.therapy.startsdashend                                                                            = Starts - Ends
-angal.therapy.telephonenumberfor                                                                       = Telephone number for
+angal.therapy.telephonenumberfor.fmt                                                                   = Telephone number for {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = Therapies plan has not been saved.
 angal.therapy.therapiesplansaved                                                                       = Therapies plan saved
 angal.therapy.therapy                                                                                  = Therapy
 angal.therapy.therapy.title                                                                            = Therapy
-angal.therapy.therapyfor                                                                               = Therapy for
+angal.therapy.therapyfor.fmt                                                                           = Therapy for {0}
 angal.therapy.therapynotavailable.title                                                                = Therapy Not Available
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = There's no telephone number associated with this Patient
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = The Therapy has not been checked, continue?
