--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1404,13 +1404,13 @@ angal.therapy.addtherapy.btn.key                                                
 angal.therapy.addvisit.btn                                                                             = Ajoutez une Visite
 angal.therapy.addvisit.btn.key                                                                         = J
 angal.therapy.availablem                                                                               = DISPONIBLE
-angal.therapy.changenotifysettingsfor                                                                  = modifications des remarques de
+angal.therapy.changenotifysettingsfor.fmt                                                              = modifications des remarques de {0}
 angal.therapy.checkavailability.btn                                                                    = Contrôler la Disponibilité
 angal.therapy.checkavailability.btn.key                                                                = C
 angal.therapy.daydays                                                                                  = jour/s
-angal.therapy.deletealltherapiesfor                                                                    = Supprimez toutes les thérapies pour
-angal.therapy.deleteallvisitsfor                                                                       = Supprimez toutes les visites pour
-angal.therapy.doyouwanttosetanumernowfor                                                               = Voulez vous insérer un numéro de téléphone pour
+angal.therapy.deletealltherapiesfor.fmt                                                                = Supprimez toutes les thérapies pour {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Supprimez toutes les visites pour {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Voulez vous insérer un numéro de téléphone pour {0}
 angal.therapy.edittherapy.btn                                                                          = Editez la Thérapie
 angal.therapy.edittherapy.btn.key                                                                      = E
 angal.therapy.edittherapyentryform.title                                                               = Modifier Formulaire Nouvelle Thérapie
@@ -1436,8 +1436,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Les visites du Patient sont enregistrées.
 angal.therapy.period                                                                                   = Période
 angal.therapy.pharmaceutical                                                                           = Pharmaceutique
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Veuillez insérer une quantité supérieure à 0
-angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Veuillez d'abord enregistrer le plan de visites
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Veuillez insérer une quantité supérieure à 0.
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Veuillez d'abord enregistrer le plan de visites.
 angal.therapy.removetherapy.btn                                                                        = Supprimez Thérapie
 angal.therapy.removetherapy.btn.key                                                                    = S
 angal.therapy.removevisit.btn                                                                          = Supprimez Visite
@@ -1447,12 +1447,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Commencer
 angal.therapy.startsdashend                                                                            = Début - Fin
-angal.therapy.telephonenumberfor                                                                       = Numéro de Téléphone de
+angal.therapy.telephonenumberfor.fmt                                                                   = Numéro de Téléphone de {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = Le plan des Thérapies n'a pas été enregistré.
 angal.therapy.therapiesplansaved                                                                       = Plan des thérapies enregistré
 angal.therapy.therapy                                                                                  = Thérapie
 angal.therapy.therapy.title                                                                            = Thérapie
-angal.therapy.therapyfor                                                                               = Thérapie pour
+angal.therapy.therapyfor.fmt                                                                           = Thérapie pour {0}
 angal.therapy.therapynotavailable.title                                                                = Thérapie non disponible
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = Il n'y a pas de numéro de téléphone associé à ce Patient
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = La Thérapie n'a pas été contrôlée, continuer?
