--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1406,13 +1406,13 @@ angal.therapy.addtherapy.btn.key                                                
 angal.therapy.addvisit.btn                                                                             = Nuova Visita
 angal.therapy.addvisit.btn.key                                                                         = V
 angal.therapy.availablem                                                                               = DISPONIBILE
-angal.therapy.changenotifysettingsfor                                                                  = Cambiare le impostazioni di notifica per
+angal.therapy.changenotifysettingsfor.fmt                                                              = Cambiare le impostazioni di notifica per {0}
 angal.therapy.checkavailability.btn                                                                    = Verifica Disponibilità
 angal.therapy.checkavailability.btn.key                                                                = D
 angal.therapy.daydays                                                                                  = giorno/i
-angal.therapy.deletealltherapiesfor                                                                    = Elimina tutte le terapie per
-angal.therapy.deleteallvisitsfor                                                                       = Eliminare tutte le visite per
-angal.therapy.doyouwanttosetanumernowfor                                                               = Vuoi assegnare un numero telefonico per
+angal.therapy.deletealltherapiesfor.fmt                                                                = Elimina tutte le terapie per {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Eliminare tutte le visite per {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Vuoi assegnare un numero telefonico per {0}
 angal.therapy.edittherapy.btn                                                                          = Modifica Terapia
 angal.therapy.edittherapy.btn.key                                                                      = M
 angal.therapy.edittherapyentryform.title                                                               = Modifica Terapia
@@ -1438,8 +1438,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Visite Paziente salvate.
 angal.therapy.period                                                                                   = Periodo
 angal.therapy.pharmaceutical                                                                           = Prodotto
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Inserire una quantità maggiore di 0
-angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Si prega di salvare prima il piano delle visite
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Inserire una quantità maggiore di 0.
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Si prega di salvare prima il piano delle visite.
 angal.therapy.removetherapy.btn                                                                        = Rimuovi Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Rimuovi Visita
@@ -1449,12 +1449,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Inizio
 angal.therapy.startsdashend                                                                            = Inizio - Fine
-angal.therapy.telephonenumberfor                                                                       = Numero telefonico per
+angal.therapy.telephonenumberfor.fmt                                                                   = Numero telefonico per {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = Il piano Terapie non è stato salvato.
 angal.therapy.therapiesplansaved                                                                       = Piano Terapie salvato.
 angal.therapy.therapy                                                                                  = Terapia
 angal.therapy.therapy.title                                                                            = Terapia
-angal.therapy.therapyfor                                                                               = Terapia per
+angal.therapy.therapyfor.fmt                                                                           = Terapia per {0}
 angal.therapy.therapynotavailable.title                                                                = Terapia non Disponibile
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = Non c'è un numero telefonico associato a questo paziente
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = La Terapia non è stata controllata, continuare?
