--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -531,11 +531,11 @@ angal.supplier.requiredfields                                               = * 
 angal.supplier.taxcode                                                      = ID de número fiscal
 angal.therapy.actions                                                       = Ações
 angal.therapy.availablem                                                    = DISPONÍVEL
-angal.therapy.changenotifysettingsfor                                       = Alterar configurações de notificar
+angal.therapy.changenotifysettingsfor.fmt                                   = Alterar configurações de notificar {0}
 angal.therapy.daydays                                                       = dia/s
-angal.therapy.deletealltherapiesfor                                         = Excluir todas as terapias para
-angal.therapy.deleteallvisitsfor                                            = Excluir todas as visitas para
-angal.therapy.doyouwanttosetanumernowfor                                    = Você quer definir um número de telefone
+angal.therapy.deletealltherapiesfor.fmt                                     = Excluir todas as terapias para {0}
+angal.therapy.deleteallvisitsfor.fmt                                        = Excluir todas as visitas para {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                = Você quer definir um número de telefone {0}
 angal.therapy.end                                                           = Final
 angal.therapy.every                                                         = Cada
 angal.therapy.followingdrugsarefewornotavailable                            = Seguintes drogas são poucos ou não está disponível:\n
@@ -557,18 +557,18 @@ angal.therapy.patientvisitscouldnotbesaved                                  = Vi
 angal.therapy.patientvisitssaved                                            = Pacientes visitas salvas.
 angal.therapy.period                                                        = Período
 angal.therapy.pharmaceutical                                                = Farmacêutico
-angal.therapy.pleaseinsertaquantitygreaterthanzero                          = Por favor, insira uma quantidade maior que 0
-angal.therapy.pleasesavethevisitplanfirst.msg                               = Salve o plano de visitas primeiro
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                      = Por favor, insira uma quantidade maior que 0.
+angal.therapy.pleasesavethevisitplanfirst.msg                               = Salve o plano de visitas primeiro.
 angal.therapy.selectapharmaceutical                                         = Selecione um farmacêutico
 angal.therapy.settelephonenumber                                            = Número de telefone definido
 angal.therapy.smsm                                                          = SMS
 angal.therapy.start                                                         = Início
 angal.therapy.startsdashend                                                 = Começa - extremidades
-angal.therapy.telephonenumberfor                                            = Número de telefone para
+angal.therapy.telephonenumberfor.fmt                                        = Número de telefone para {0}
 angal.therapy.therapiesplancouldnotbesaved                                  = Plano de terapias não tiver sido salvo.
 angal.therapy.therapiesplansaved                                            = Plano de terapias salvou
 angal.therapy.therapy                                                       = Terapia
-angal.therapy.therapyfor                                                    = Terapia para
+angal.therapy.therapyfor.fmt                                                = Terapia para {0}
 angal.therapy.theresnotelephonenumberassociatedwiththispatient              = Não há nenhum número de telefone associado com este paciente.
 angal.therapy.thetherapyhasnotbeencheckedcontinue                           = A terapia não foi verificada, continuar?
 angal.therapy.thetherapyisnotavailablecontinue                              = A terapia não está disponível, continuar?
