--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1404,13 +1404,13 @@ angal.therapy.addtherapy.btn.key                                                
 angal.therapy.addvisit.btn                                                                             = Nueva Visita
 angal.therapy.addvisit.btn.key                                                                         = U
 angal.therapy.availablem                                                                               = DISPONIBLE
-angal.therapy.changenotifysettingsfor                                                                  = Cambiar la organización de notificación para
+angal.therapy.changenotifysettingsfor.fmt                                                              = Cambiar la organización de notificación para {0}
 angal.therapy.checkavailability.btn                                                                    = Verificar Disponibilidad
 angal.therapy.checkavailability.btn.key                                                                = V
 angal.therapy.daydays                                                                                  = día/s
-angal.therapy.deletealltherapiesfor                                                                    = Eliminar todas las terapias para
-angal.therapy.deleteallvisitsfor                                                                       = Eliminar todas las visitas para
-angal.therapy.doyouwanttosetanumernowfor                                                               = Asignar un número telefónico para
+angal.therapy.deletealltherapiesfor.fmt                                                                = Eliminar todas las terapias para {0}
+angal.therapy.deleteallvisitsfor.fmt                                                                   = Eliminar todas las visitas para {0}
+angal.therapy.doyouwanttosetanumernowfor.fmt                                                           = Asignar un número telefónico para {0}
 angal.therapy.edittherapy.btn                                                                          = Modificar Terapia
 angal.therapy.edittherapy.btn.key                                                                      = M
 angal.therapy.edittherapyentryform.title                                                               = Modificar Formulario de Entrada de Terapia
@@ -1436,8 +1436,8 @@ angal.therapy.patientvisitscouldnotbesaved                                      
 angal.therapy.patientvisitssaved                                                                       = Visitas del paciente grabadas
 angal.therapy.period                                                                                   = Período
 angal.therapy.pharmaceutical                                                                           = Producto
-angal.therapy.pleaseinsertaquantitygreaterthanzero                                                     = Digitar una cantidad mayor a cero
-angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Guarde primero el plan de visitas
+angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Digitar una cantidad mayor a cero.
+angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Guarde primero el plan de visitas.
 angal.therapy.removetherapy.btn                                                                        = Remover Terapia
 angal.therapy.removetherapy.btn.key                                                                    = R
 angal.therapy.removevisit.btn                                                                          = Remover Visita
@@ -1447,12 +1447,12 @@ angal.therapy.settelephonenumber                                                
 angal.therapy.smsm                                                                                     = SMS
 angal.therapy.start                                                                                    = Inicio
 angal.therapy.startsdashend                                                                            = Inicio _ Fin
-angal.therapy.telephonenumberfor                                                                       = Número telefónico para
+angal.therapy.telephonenumberfor.fmt                                                                   = Número telefónico para {0}
 angal.therapy.therapiesplancouldnotbesaved                                                             = El Plan de terapias no se ha guardado.
 angal.therapy.therapiesplansaved                                                                       = Plan de terapias guadado
 angal.therapy.therapy                                                                                  = Terapia
 angal.therapy.therapy.title                                                                            = Terapia
-angal.therapy.therapyfor                                                                               = Terapia para
+angal.therapy.therapyfor.fmt                                                                           = Terapia para {0}
 angal.therapy.therapynotavailable.title                                                                = Terapia no disponible
 angal.therapy.theresnotelephonenumberassociatedwiththispatient                                         = No existe un número telefónico asociado a este paciente
 angal.therapy.thetherapyhasnotbeencheckedcontinue                                                      = La Terapia no a sido controlada, continuar?
