--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1437,7 +1437,7 @@ angal.therapy.patientvisitssaved                                                
 angal.therapy.period                                                                                   = Période
 angal.therapy.pharmaceutical                                                                           = Pharmaceutique
 angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                                                 = Veuillez insérer une quantité supérieure à 0.
-angal.therapy.pleasesavethevisitplanfirst.msg                                                          = Veuillez d'abord enregistrer le plan de visites.
+angal.therapy.pleasesavechangesfirst.msg                                                               = Veuillez d'abord enregistrer les modifications.
 angal.therapy.removetherapy.btn                                                                        = Supprimez Thérapie
 angal.therapy.removetherapy.btn.key                                                                    = S
 angal.therapy.removevisit.btn                                                                          = Supprimez Visite
