--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -558,7 +558,7 @@ angal.therapy.patientvisitssaved                                            = Pa
 angal.therapy.period                                                        = Período
 angal.therapy.pharmaceutical                                                = Farmacêutico
 angal.therapy.pleaseinsertaquantitygreaterthanzero.msg                      = Por favor, insira uma quantidade maior que 0.
-angal.therapy.pleasesavethevisitplanfirst.msg                               = Salve o plano de visitas primeiro.
+angal.therapy.pleasesavechangesfirst.msg                                    = Salve as alterações primeiro.
 angal.therapy.selectapharmaceutical                                         = Selecione um farmacêutico
 angal.therapy.settelephonenumber                                            = Número de telefone definido
 angal.therapy.smsm                                                          = SMS
