Avoid therapies in the past and improved bundles

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1408,6 +1408,7 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = A
 angal.therapy.addvisit.btn                                                                             = Add Visit
 angal.therapy.addvisit.btn.key                                                                         = D
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = A therapy cannot be defined for a date that is past.
 angal.therapy.availablem                                                                               = AVAILABLE
 angal.therapy.changenotifysettingsfor.fmt                                                              = Change notify settings {0}
 angal.therapy.checkavailability.btn                                                                    = Check Availability
@@ -1511,7 +1512,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prev.
 angal.visit.arrowprevious.btn.key                                                                      = P
-angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = You can not set a date in the past for the next visit.
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = A visit cannot be scheduled for a date that is past.
 angal.visit.changepatient                                                                              = Change Patient
 angal.visit.durationinminutes                                                                          = Duration (Min)
 angal.visit.findpatient.btn                                                                            = Find Patient
