--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1403,6 +1403,7 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = N
 angal.therapy.addvisit.btn                                                                             = Nueva Visita
 angal.therapy.addvisit.btn.key                                                                         = U
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = No se puede definir una terapia para una fecha pasada.
 angal.therapy.availablem                                                                               = DISPONIBLE
 angal.therapy.changenotifysettingsfor.fmt                                                              = Cambiar la organización de notificación para {0}
 angal.therapy.checkavailability.btn                                                                    = Verificar Disponibilidad
@@ -1506,7 +1507,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Previo
 angal.visit.arrowprevious.btn.key                                                                      = V
-angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = No puede establecer una fecha en el pasado para la próxima visita.
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = No se puede programar una visita para una fecha pasada.
 angal.visit.changepatient                                                                              = Cambiar Paciente
 angal.visit.durationinminutes                                                                          = Duración (minutos)
 angal.visit.findpatient.btn                                                                            = Asociar Paciente
