--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1403,6 +1403,7 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = A
 angal.therapy.addvisit.btn                                                                             = Ajoutez une Visite
 angal.therapy.addvisit.btn.key                                                                         = J
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = Une thérapie ne peut pas être définie pour une date qui est passée.
 angal.therapy.availablem                                                                               = DISPONIBLE
 angal.therapy.changenotifysettingsfor.fmt                                                              = modifications des remarques de {0}
 angal.therapy.checkavailability.btn                                                                    = Contrôler la Disponibilité
@@ -1506,7 +1507,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Préc.
 angal.visit.arrowprevious.btn.key                                                                      = P
-angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = Vous ne pouvez pas entrer une date du passé pour la prochaine visite.
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = Une visite ne peut pas être programmée pour une date passée.
 angal.visit.changepatient                                                                              = Changez de Patient
 angal.visit.durationinminutes                                                                          = Durée (Min)
 angal.visit.findpatient.btn                                                                            = Chercher Patient
