--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1405,6 +1405,7 @@ angal.therapy.addtherapy.btn                                                    
 angal.therapy.addtherapy.btn.key                                                                       = N
 angal.therapy.addvisit.btn                                                                             = Nuova Visita
 angal.therapy.addvisit.btn.key                                                                         = V
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                                            = Non è possibile definire una terapia per una data passata.
 angal.therapy.availablem                                                                               = DISPONIBILE
 angal.therapy.changenotifysettingsfor.fmt                                                              = Cambiare le impostazioni di notifica per {0}
 angal.therapy.checkavailability.btn                                                                    = Verifica Disponibilità
@@ -1508,7 +1509,7 @@ angal.visit.addvisit2.btn                                                       
 angal.visit.addvisit2.btn.key                                                                          = V
 angal.visit.arrowprevious.btn                                                                          = <-Prec.
 angal.visit.arrowprevious.btn.key                                                                      = P
-angal.visit.cannotsetadateinthepastfornextvisit.msg                                                    = Non è possibile impostare una data nel passato per la prossima visita.
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                                              = Non è possibile programmare una visita per una data passata.
 angal.visit.changepatient                                                                              = Cambia Paziente
 angal.visit.durationinminutes                                                                          = Durata (min)
 angal.visit.findpatient.btn                                                                            = Trova Paziente
