--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -530,6 +530,7 @@ angal.supplier.pleaseinsertaname                                            = Po
 angal.supplier.requiredfields                                               = * Os campos obrigatórios
 angal.supplier.taxcode                                                      = ID de número fiscal
 angal.therapy.actions                                                       = Ações
+angal.therapy.atherapycannotbedefinedforadatethatispast.msg                 = Uma terapia não pode ser definida para uma data que já passou.
 angal.therapy.availablem                                                    = DISPONÍVEL
 angal.therapy.changenotifysettingsfor.fmt                                   = Alterar configurações de notificar {0}
 angal.therapy.daydays                                                       = dia/s
@@ -579,6 +580,7 @@ angal.therapy.weeks                                                         = Se
 angal.vaccine.requiredfields                                                = * Os campos obrigatórios
 angal.vaccine.selectavaccinetype                                            = Selecione o tipo
 angal.vaccine.vaccinetype                                                   = Tipo
+angal.visit.avisitcannotbescheduledforadatethatispast.msg                   = Uma visita não pode ser agendada para uma data passada.
 angal.visit.changepatient                                                   = Paciente de mudança
 angal.visit.selectaward                                                     = Selecione uma ala
 angal.visit.visits                                                          = Visitas
